--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
 .card {
 	height: 600px;
 	width: 322px;
+	max-width: 322px;
 	background-color: #72CC9C;
 	box-shadow: 10px 15px 20px 0px #a5a59d;
 	border-radius: 4px;
